--- a/modules/data_protection/_posts/2000-01-03-week9.md
+++ b/modules/data_protection/_posts/2000-01-03-week9.md
@@ -6,14 +6,20 @@ title: Week 12
 
 **Lecture:** Applied Ethics in Data Science
 
- <!-- * DS-UA 202: [applied ethics in data science](../../../assets/9_ethics_202_2023.pdf) -->
+ <!--- * DS-UA 202: [applied ethics in data science](../../../assets/9_ethics_202_2023.pdf)
 * DS-GA 1017: [applied ethics](../../../assets/12_Ethics_1017.pdf)
+-->
 
 **Topics:** Data protection, ethical frameworks, principles-based approach
 
-**Reading:**  [Data Protection](../../../assets/protection_reader_2024.pdf) 
+**Reading:**  
+ <!--- 
+ [Data Protection](../../../assets/protection_reader_2024.pdf) 
+ -->
 
 **Lab:**
 
+ <!--- 
 * DS-UA 202: ...
 * DS-GA 1017: [Colab Notebook](https://colab.research.google.com/drive/1rRv5lBIpBF1K_jsZ7D7akdmnGVV81f1D?usp=sharing)
+ -->
