fixed some issues

--- a/modules/data_protection/_posts/2000-01-03-week9.md
+++ b/modules/data_protection/_posts/2000-01-03-week9.md
@@ -6,7 +6,8 @@ title: Week 12
 
 **Lecture:** Applied Ethics in Data Science
 
- <!--- * DS-UA 202: [applied ethics in data science](../../../assets/9_ethics_202_2023.pdf)
+ <!--- 
+* DS-UA 202: [applied ethics in data science](../../../assets/9_ethics_202_2023.pdf)
 * DS-GA 1017: [applied ethics](../../../assets/12_Ethics_1017.pdf)
 -->
 
