--- a/modules/data_science_lifecycle/_posts/2000-01-01-week5.md
+++ b/modules/data_science_lifecycle/_posts/2000-01-01-week5.md
@@ -6,7 +6,7 @@ title: Week 5
 
 **Lecture:** The data science lifecycle, data profiling & data cleaning
 
-<!--- * DS-UA 202: [lifecycle slides](../../../assets/8_Lifecycle_202_2023.pdf) -->
+<!--- * DS-UA 202: [lifecycle slides](../../../assets/8_Lifecycle_202_2023.pdf)
 *  DS-GA 1017: [lifecycle slides](../../../assets/5_6_Lifecycle_1017.pdf)
 *  DS-UA 202: [lifecycle slides](../../../assets/5_6_Lifecycle_202.pdf)
 -->
@@ -17,6 +17,7 @@ title: Week 5
 -->
 
 **Lab:** data profiling and data cleaning
+
 <!--- 
 * DS-UA 202: [Colab Notebook](https://drive.google.com/file/d/1m6wklJmM6Lb8djck7Qv8Qk5xLNdYpame/view?usp=sharing)
 * DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1TNprfJb_oY6tR_W6rHiKcTUO4mdJapzD/view?usp=sharing)
