fixing lingering comment issues

--- a/modules/data_protection/_posts/2000-01-01-week7.md
+++ b/modules/data_protection/_posts/2000-01-01-week7.md
@@ -6,7 +6,8 @@ title: Week 10
 
 **Lecture:** Anonymity and Privacy I
 
-<!--- * DS-UA 202: [differential privacy slides](../../../assets/9_Privacy_202_2023.pdf)
+<!--- 
+* DS-UA 202: [differential privacy slides](../../../assets/9_Privacy_202_2023.pdf)
 * DS-GA 1017: [differential privacy slides](../../../assets/10_11_Privacy_1017.pdf) 
  -->
  
