--- a/modules/data_science_lifecycle/_posts/2000-01-01-week5.md
+++ b/modules/data_science_lifecycle/_posts/2000-01-01-week5.md
@@ -6,7 +6,8 @@ title: Week 5
 
 **Lecture:** The data science lifecycle, data profiling & data cleaning
 
-<!--- * DS-UA 202: [lifecycle slides](../../../assets/8_Lifecycle_202_2023.pdf)
+<!---
+* DS-UA 202: [lifecycle slides](../../../assets/8_Lifecycle_202_2023.pdf)
 *  DS-GA 1017: [lifecycle slides](../../../assets/5_6_Lifecycle_1017.pdf)
 *  DS-UA 202: [lifecycle slides](../../../assets/5_6_Lifecycle_202.pdf)
 -->
