--- a/modules/fairness/_posts/2000-01-04-week4.md
+++ b/modules/fairness/_posts/2000-01-04-week4.md
@@ -6,9 +6,11 @@ title: Week 4
 
 **Lecture:** Fairness as Equality of Opportunity
 
-<!-- * DS-UA 202: [fairness and causality](../../../assets/5_counterfactual_fairness_2023_202.pdf) and [fairness of equality of opportunity](../../../assets/6_Fairness_2023_202.pdf) and [equality of opportunity](../../../assets/7_Fairness_EO_2023_202.pdf) -->
-* DS-GA 1017: <br>
+<!--- 
+* DS-UA 202: [fairness and causality](../../../assets/5_counterfactual_fairness_2023_202.pdf) and [fairness of equality of opportunity](../../../assets/6_Fairness_2023_202.pdf) and [equality of opportunity](../../../assets/7_Fairness_EO_2023_202.pdf) 
+-->
 <!---
+* DS-GA 1017: <br>
   [fairness as equality of opportunity](../../../assets/4_Fairness_1017.pdf)<br>
   [fairness in ranking](../../../assets/4_Fairness_in_Ranking.pdf)<br>
   [fairness in algorithmic recourse (vignette)](../../../assets/4_Algorithmic_Recourse_Vignette.pdf)
@@ -31,4 +33,6 @@ title: Week 4
 * DS-UA 202: [Colab Notebook](https://colab.research.google.com/drive/1BOefomb4ZIET_H3eHLv2T9frSlIodCu9?usp=sharing)
 -->
 
-<!-- * DS-UA 202: [Q&A slides - Feb 24th](https://docs.google.com/presentation/d/1vemeXf03EifmOOT0JHFstijUblRT0Xib6HJ9pWVn6xI/edit?usp=sharing) -->
+<!--- 
+* DS-UA 202: [Q&A slides - Feb 24th](https://docs.google.com/presentation/d/1vemeXf03EifmOOT0JHFstijUblRT0Xib6HJ9pWVn6xI/edit?usp=sharing) 
+-->
