--- a/modules/transparency_and_interpretability/_posts/2000-01-03-week13.md
+++ b/modules/transparency_and_interpretability/_posts/2000-01-03-week13.md
@@ -6,16 +6,21 @@ title: Week 9
 
 
 **Lecture:** 
-<!-- [Slides](../../../assets/9_Transparency_In_Practice_2024.pdf) -->
+<!--- 
+[Slides](../../../assets/9_Transparency_In_Practice_2024.pdf) 
+-->
 
 **Topics:**  Interpretability: data sheets, model cards, and nutritional labels.
 
 **Reading:** 
-<!-- [Transparency and Interpretability Reader](../../../assets/transparency_reader_2024.pdf) -->
+<!--- 
+[Transparency and Interpretability Reader](../../../assets/transparency_reader_2024.pdf) 
+-->
 
 **Lab:** LIME
-<!-- 
+<!---
 * DS-UA 202: [Colab Notebook](https://drive.google.com/file/d/1R2tDfMFuXBHEw7ptSqC9LxKle53RI1-K/view?usp=sharing)
-* DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1_NXvsVJgkN9t_CyWFdPbN2Rc-_Tl8X4y/view?usp=sharing) -->
+* DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1_NXvsVJgkN9t_CyWFdPbN2Rc-_Tl8X4y/view?usp=sharing) 
+-->
 
 
