--- a/modules/transparency_and_interpretability/_posts/2000-01-02-week12.md
+++ b/modules/transparency_and_interpretability/_posts/2000-01-02-week12.md
@@ -7,19 +7,27 @@ title: Week 8
 **Lecture:** Transparency in online ads
 
 <!--- 
+
 * DS-GA 1017: [slides](../../../assets/8_Transparency_Ads_1017.pdf)
 * DS-UA 202: [slides](../../../assets/12_transparency_ads_202_2023.pdf) 
+
 -->
 
 **Topics:** Experiments in ad targeting and delivery; discrimination in online ad delivery; legal ramifications
 
 **Reading:** 
 <!--- 
+
 [Transparency and Interpretability Reader](../../../assets/transparency_reader_2024.pdf) 
+
 -->
 
-**Lab:** ShaRP: an implementation of QII + explaining rankings
+**Lab:** 
+
 <!---
+
+ShaRP: an implementation of QII + explaining rankings
 * DS-UA 202: [ShaRP](https://drive.google.com/file/d/1Pt95RDWl1LMJ8vIa8rxB5E1jjM9qkQPs/view?usp=sharing)
 * DS-GA 1017: [ShaRP](https://drive.google.com/file/d/1Pt95RDWl1LMJ8vIa8rxB5E1jjM9qkQPs/view?usp=sharing) 
+
 -->
