--- a/modules/data_protection/_posts/2000-01-04-week10.md
+++ b/modules/data_protection/_posts/2000-01-04-week10.md
@@ -5,5 +5,9 @@ title: Week 13
 ## Data Protection
 
 **Lecture:** Final exam review
-<!-- 
-**Lab:** Working through homework and quiz solutions -->
+
+<!---
+
+**Lab:** Working through homework and quiz solutions 
+
+-->
