--- a/modules/data_protection/_posts/2000-01-02-week8.md
+++ b/modules/data_protection/_posts/2000-01-02-week8.md
@@ -6,24 +6,13 @@ title: Week 11
 
 **Lecture:** Anonymity and Privacy II
 
-<!--- 
-
-* DS-GA 1017: [differential privacy slides](../../../assets/10_11_Privacy_1017.pdf)
-
---> 
+<!---  * DS-GA 1017: [differential privacy slides](../../../assets/10_11_Privacy_1017.pdf) --> 
 
 **Topics:** Limits of anonymization, differential privacy
 
 **Reading:**  
-<!--- 
-
-[Data Protection](../../../assets/protection_reader_2024.pdf) 
-
---> 
+<!---  [Data Protection](../../../assets/protection_reader_2024.pdf) --> 
 
 **Lab:** Data Synthesizer
 
-<!--- 
-* DS-UA 202: [Colab Notebook](https://drive.google.com/file/d/1EmUlKHbrhCINFgwxIX7ZDdc2SVH7DGh8/view?usp=sharing)
-* DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1E_L9CieSxmB3t9mdtjkhCiPojZ2KDZwv/view?usp=sharing)
-  --> 
+<!---  * DS-UA 202: [Colab Notebook](https://drive.google.com/file/d/1EmUlKHbrhCINFgwxIX7ZDdc2SVH7DGh8/view?usp=sharing) * DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1E_L9CieSxmB3t9mdtjkhCiPojZ2KDZwv/view?usp=sharing) --> 
