--- a/modules/transparency_and_interpretability/_posts/2000-01-01-week11.md
+++ b/modules/transparency_and_interpretability/_posts/2000-01-01-week11.md
@@ -6,22 +6,14 @@ title: Week 7
 
 **Lecture:** Auditing black-box models
 
-
-<!---
-* DS-GA 1017: [auditing black-box models slides](../../../assets/7_BlackBox_1017.pdf)
-* DS-UA 202: [auditing black-box models slides](../../../assets/7_BlackBox_202.pdf) -->
+<!--- * DS-GA 1017: [auditing black-box models slides](../../../assets/7_BlackBox_1017.pdf) * DS-UA 202: [auditing black-box models slides](../../../assets/7_BlackBox_202.pdf) -->
 
 
 **Topics:** Auditing black-box models; explainable machine learning
 
 **Reading:** 
-<!--- 
-[Transparency and Interpretability Reader](../../../assets/transparency_reader_2024.pdf) 
--->
+<!--- [Transparency and Interpretability Reader](../../../assets/transparency_reader_2024.pdf) -->
 
 **Lab:** Explaining models with SHAP
 
-<!---
-* DS-UA 202: [Colab Notebook](https://drive.google.com/file/d/1Df5oXukfXeCTN44ZhBvo7oOPIjaajvxN/view?usp=sharing)
-* DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1IZ8GOOCDe8VCwEDHQQS69B_QYAZRsIFM/view?usp=drive_link) 
--->
+<!--- * DS-UA 202: [Colab Notebook](https://drive.google.com/file/d/1Df5oXukfXeCTN44ZhBvo7oOPIjaajvxN/view?usp=sharing) * DS-GA 1017: [Colab Notebook](https://drive.google.com/file/d/1IZ8GOOCDe8VCwEDHQQS69B_QYAZRsIFM/view?usp=drive_link)  -->
