fixing the undergrad page

--- a/modules/ds_ua_202/_posts/2000-01-00-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-00-DS-UA-202.md
@@ -2,7 +2,9 @@
 title: DS-UA 202
 ---
 
-## DS-UA 202 Responsible Data Science (Undergraduate Course) Plan, Spring '25
+## DS-UA 202
+
+### Responsible Data Science (Undergraduate Course) Plan, Spring '25
 
 **Table:** 
 
