Fixed layout issue

--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -8,21 +8,41 @@ title: DS-UA 202
 
 **Table:** 
 
-| Date     | Week | Unit            | Title             | Guest                        | Lab                | Lab Material | Reading | Lecture Slides                                                    |
-|----------|------|-----------------|-------------------|------------------------------|--------------------|--------------|---------|-------------------------------------------------------------------|
-| 1/23/25  | 1    | Intro           | Introduction      | None                         | NO LAB             |              |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)   |
-| 1/30/25  | 2    | Fairness        | Algo Fairness I   | Drew Calcagno (Google)       | COMPAS             |              |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)      |                  |
-| 2/6/25   | 3    | Fairness        | Algo Fairness II  |                              | Fairlearn I        |              |         |                                                                   |
-| 2/13/25  | 4    | Fairness        | Fairness III      | Isabel Chein (Microsoft)     | Fairlearn II       |              |         |                                                                   |
-| 2/20/25  | 5    | Fairness        | Lifecycle         |                              | Intersectionality  |              |         |                                                                   |
-| 2/27/25  | 6    | Transparency    | Explainability I  | Mateo Espinosa (Cambridge)   | Data Cleaning      |              |         |                                                                   |
-| 3/6/25   | 7    | Transparency    | Explainability II | Lujain Ibrahim (Oxford)      | NO LAB             |              |         |                                                                   |
-| 3/13/25  | 8    | Transparency    | Ads               |                              | SHAP               |              |         |                                                                   |
-| 3/20/25  | 9    | Midterm Exam    |                   |                              | LIME               |              |         |                                                                   |
-| 3/27/25  | 10   | Spring Break    |                   |                              |                    |              |         |                                                                   |
-| 4/3/25   | 11   | Transparency    | Explainability III|                              | SHARP              |              |         |                                                                   |
-| 4/10/25  | 12   | Data Protection | Diff Privacy      |                              | DataSynthesizer    |              |         |                                                                   |
-| 4/17/25  | 13   | Data Protection | Diff Privacy      |                              | DataSynthesizer    |              |         |                                                                   |
-| 4/24/25  | 14   | Data Protection | Applied Ethics    |                              | Final Review       |              |         |                                                                   |
-| 5/1/25   | 15   | Final Exam      |                   |                              | Project OH         |              |         |                                                                   |
+| Date       | Week | Unit            | Title             | Guest                        | Lab                |
+|------------|------|-----------------|-------------------|------------------------------|--------------------|
+| 1/23/25    | 1    | Intro           | Introduction      | None                         | NO LAB             |
+| 1/30/25    | 2    | Fairness        | Algo Fairness I   | Drew Calcagno (Google)       | COMPAS             |
+| 2/6/25     | 3    | Fairness        | Algo Fairness II  |                              | Fairlearn I        |
+| 2/13/25    | 4    | Fairness        | Fairness III      | Isabel Chein (Microsoft)     | Fairlearn II       |
+| 2/20/25    | 5    | Fairness        | Lifecycle         |                              | Intersectionality  |
+| 2/27/25    | 6    | Transparency    | Explainability I  | Mateo Espinosa (Cambridge)   | Data Cleaning      |
+| 3/6/25     | 7    | Transparency    | Explainability II | Lujain Ibrahim (Oxford)      | NO LAB             |
+| 3/13/25    | 8    | Transparency    | Ads               |                              | SHAP               |
+| 3/20/25    | 9    | Midterm Exam    |                   |                              | LIME               |
+| 3/27/25    | 10   | Spring Break    |                   |                              |                    |
+| 4/3/25     | 11   | Transparency    | Explainability III|                              | SHARP              |
+| 4/10/25    | 12   | Data Protection | Diff Privacy      |                              | DataSynthesizer    |
+| 4/17/25    | 13   | Data Protection | Diff Privacy      |                              | DataSynthesizer    |
+| 4/24/25    | 14   | Data Protection | Applied Ethics    |                              | Final Review       |
+| 5/1/25     | 15   | Final Exam      |                   |                              | Project OH         |
 
+
+**Material Table:** 
+
+| Week | Unit            | Lab Material | Reading | Lecture Slides |
+|------|----------------|--------------|---------|---------------|
+| 1    | Intro          |              |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)               |
+| 2    | Fairness       |              |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |               |
+| 3    | Fairness       |              |         |               |
+| 4    | Fairness       |              |         |               |
+| 5    | Fairness       |              |         |               |
+| 6    | Transparency   |              |         |               |
+| 7    | Transparency   |              |         |               |
+| 8    | Transparency   |              |         |               |
+| 9    | Midterm Exam   |              |         |               |
+| 10   | Spring Break   |              |         |               |
+| 11   | Transparency   |              |         |               |
+| 12   | Data Protection|              |         |               |
+| 13   | Data Protection|              |         |               |
+| 14   | Data Protection|              |         |               |
+| 15   | Final Exam     |              |         |               |
