week alignment correction

--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -31,9 +31,9 @@ title: DS-UA 202
 
 | Week | Unit            | Lab Material | Reading | Lecture Slides |
 |------|----------------|--------------|---------|---------------|
-| 1    | Intro          | [Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)            |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)               |
-| 2    | Fairness       | [Colab Notebook](https://colab.research.google.com/drive/1hNjaqycBzSLpbUfkeb8GeTo1U81xsTgA?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |               |
-| 3    | Fairness       |              |         |               |
+| 1    | Intro          |             |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)               |
+| 2    | Fairness       |[Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |               |
+| 3    | Fairness       |[Colab Notebook](https://colab.research.google.com/drive/1hNjaqycBzSLpbUfkeb8GeTo1U81xsTgA?usp=sharing)            |         |               |
 | 4    | Fairness       |              |         |               |
 | 5    | Fairness       |              |         |               |
 | 6    | Transparency   |              |         |               |
