Lab 2 file updated

--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -33,7 +33,7 @@ title: DS-UA 202
 |------|----------------|--------------|---------|---------------|
 | 1    | Intro          |             |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)               |
 | 2    | Fairness       |[Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |               |
-| 3    | Fairness       |[Colab Notebook](https://colab.research.google.com/drive/1hNjaqycBzSLpbUfkeb8GeTo1U81xsTgA?usp=sharing)            |         |               |
+| 3    | Fairness       |[Colab Notebook](../../../assets/Lab_2_Fairlearn_Student_DS_UA_202_Spring'25.ipynb)            |         |               |
 | 4    | Fairness       |              |         |               |
 | 5    | Fairness       |              |         |               |
 | 6    | Transparency   |              |         |               |
