--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -32,8 +32,8 @@ title: DS-UA 202
 | Week | Unit            | Lab Material | Reading | Lecture Slides |
 |------|----------------|--------------|---------|---------------|
 | 1    | Intro          |             |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)               |
-| 2    | Fairness       |[Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |               |
-| 3    | Fairness       |[Colab Notebook](../../../assets/Lab_2_Fairlearn_Student_DS_UA_202_Spring'25.ipynb)            |         |               |
+| 2    | Fairness       |[Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |[Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf)               |
+| 3    | Fairness       |[Colab Notebook](../../../assets/Lab_2_Fairlearn_Student_DS_UA_202_Spring'25.ipynb)            |         |[Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf)               |
 | 4    | Fairness       |              |         |               |
 | 5    | Fairness       |              |         |               |
 | 6    | Transparency   |              |         |               |
