--- a/modules/fairness/_posts/2000-01-03-week3.md
+++ b/modules/fairness/_posts/2000-01-03-week3.md
@@ -24,5 +24,6 @@ title: Week 3
 
 <!---
 * DS-GA 1017: [Colab Notebook](https://colab.research.google.com/drive/1bHsDGdUAzdYu2f3oPRZyRNEvBlnWz95J?usp=drive_link)
-* DS-UA 202: [Colab Notebook](https://colab.research.google.com/drive/1ENOdUTKYOS2slmzcGyAf2yPRt__kCjnf?usp=drive_link)
+
 -->
+[Colab Notebook](https://drive.google.com/file/d/1hcvT2cRuuAyRz369GOeUsA11gj0e4G3R/view?usp=drive_link)
