added reading material for week 5

--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -35,7 +35,7 @@ title: DS-UA 202
 | 2    | Fairness       |[Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |[Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf)               |
 | 3    | Fairness       |[Colab Notebook](../../../assets/Lab_2_Fairlearn_Student_DS_UA_202_Spring'25.ipynb)            |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)          |[Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf)               |
 | 4    | Fairness       |              |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)          |               |
-| 5    | Fairness       |              |         |               |
+| 5    | Fairness       |              |[Reading Material](../../../assets/lifecycle_reader_2024_DS_UA_202_Spring'25.pdf)         |               |
 | 6    | Transparency   |              |         |               |
 | 7    | Transparency   |              |         |               |
 | 8    | Transparency   |              |         |               |
