Added Lab4 link

--- a/modules/fairness/_posts/2000-01-04-week4.md
+++ b/modules/fairness/_posts/2000-01-04-week4.md
@@ -26,12 +26,14 @@ title: Week 4
 [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) 
 -->
 
-**Lab:** 
+**Lab:** [Colab Notebook](https://drive.google.com/file/d/11ZUDSM5Eo0zbcVEilZ3Khy44Bl3cZD6F/view?usp=sharing)
 
 <!---
 * DS-GA 1017: [Colab Notebook](https://colab.research.google.com/drive/1yC_vdcVrvDkrAUhPhrgcOU4UT2rOycfx?usp=sharing)
 * DS-UA 202: [Colab Notebook](https://colab.research.google.com/drive/1BOefomb4ZIET_H3eHLv2T9frSlIodCu9?usp=sharing)
 -->
+
+
 
 <!--- 
 * DS-UA 202: [Q&A slides - Feb 24th](https://docs.google.com/presentation/d/1vemeXf03EifmOOT0JHFstijUblRT0Xib6HJ9pWVn6xI/edit?usp=sharing) 
