--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -29,20 +29,21 @@ title: DS-UA 202
 
 **Material Table:** 
 
-| Week | Unit            | Lab Material | Reading | Lecture Slides |
-|------|----------------|--------------|---------|---------------|
-| 1    | Intro          |             |         |[intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf)               |
-| 2    | Fairness       |[Colab Notebook](https://drive.google.com/file/d/1RtVVABOOtccq0TOmWy3WeTCp2BVeCIyH/view?usp=sharing)             |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)         |[Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf)               |
-| 3    | Fairness       |[Colab Notebook](../../../assets/Lab_2_Fairlearn_Student_DS_UA_202_Spring'25.ipynb)            |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)          |[Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf)               |
-| 4    | Fairness       |              |[Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf)          |               |
-| 5    | Fairness       |              |[Responsibility in the Data Science Lifecycle](../../../assets/lifecycle_reader_2024_DS_UA_202_Spring'25.pdf)         |               |
-| 6    | Transparency   |              |         |               |
-| 7    | Transparency   |              |         |               |
-| 8    | Transparency   |              |         |               |
-| 9    | Midterm Exam   |              |         |               |
-| 10   | Spring Break   |              |         |               |
-| 11   | Transparency   |              |         |               |
-| 12   | Data Protection|              |         |               |
-| 13   | Data Protection|              |         |               |
-| 14   | Data Protection|              |         |               |
-| 15   | Final Exam     |              |         |               |
+| Week | Unit            | Reading | Lecture Slides |
+|------|----------------|---------|---------------|
+| 1    | Intro          |         | [intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf) |
+| 2    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | [Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf) |
+| 3    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | [Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf) |
+| 4    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | |
+| 5    | Fairness       | [Responsibility in the Data Science Lifecycle](../../../assets/lifecycle_reader_2024_DS_UA_202_Spring'25.pdf) |[Lecture slides](../../../assets/4_Fairness_DS_UA_202_Spring'25.pdf)|
+| 6    | Transparency   |         | |
+| 7    | Transparency   |         | |
+| 8    | Transparency   |         | |
+| 9    | Midterm Exam   |         | |
+| 10   | Spring Break   |         | |
+| 11   | Transparency   |         | |
+| 12   | Data Protection|         | |
+| 13   | Data Protection|         | |
+| 14   | Data Protection|         | |
+| 15   | Final Exam     |         | |
+
