--- a/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
+++ b/modules/ds_ua_202/_posts/2000-01-01-DS-UA-202.md
@@ -13,17 +13,17 @@ title: DS-UA 202
 | 1/23/25    | 1    | Intro           | Introduction      | None                         | NO LAB             |
 | 1/30/25    | 2    | Fairness        | Algo Fairness I   | Drew Calcagno (Google)       | COMPAS             |
 | 2/6/25     | 3    | Fairness        | Algo Fairness II  |                              | Fairlearn I        |
-| 2/13/25    | 4    | Fairness        | Fairness III      | Isabel Chein (Microsoft)     | Fairlearn II       |
+| 2/13/25    | 4    | Fairness        | Fairness III      | Ben Laufer (Cornell)      | Fairlearn II       |
 | 2/20/25    | 5    | Fairness        | Lifecycle         |                              | Intersectionality  |
 | 2/27/25    | 6    | Transparency    | Explainability I  | Mateo Espinosa (Cambridge)   | Data Cleaning      |
 | 3/6/25     | 7    | Transparency    | Explainability II | Lujain Ibrahim (Oxford)      | NO LAB             |
-| 3/13/25    | 8    | Transparency    | Ads               |                              | SHAP               |
+| 3/13/25    | 8    | Transparency    | Ads               | Varun Babbar (Duke)                             | SHAP               |
 | 3/20/25    | 9    | Midterm Exam    |                   |                              | LIME               |
 | 3/27/25    | 10   | Spring Break    |                   |                              |                    |
-| 4/3/25     | 11   | Transparency    | Explainability III|                              | SHARP              |
+| 4/3/25     | 11   | Transparency    | Explainability III| Valerie Chen (CMU) ONLINE                              | SHARP              |
 | 4/10/25    | 12   | Data Protection | Diff Privacy      |                              | DataSynthesizer    |
 | 4/17/25    | 13   | Data Protection | Diff Privacy      |                              | DataSynthesizer    |
-| 4/24/25    | 14   | Data Protection | Applied Ethics    |                              | Final Review       |
+| 4/24/25    | 14   | Data Protection | Applied Ethics    | Mackenzie Jorgensen (Turing)                              | Final Review       |
 | 5/1/25     | 15   | Final Exam      |                   |                              | Project OH         |
 
 
@@ -34,8 +34,8 @@ title: DS-UA 202
 | 1    | Intro          |         | [intro slides](../../../assets/1_Intro_Week_1_202Spring2025.pdf) |
 | 2    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | [Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf) |
 | 3    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | [Lecture slides](../../../assets/JC 2_3_Fairness_DS_UA_202_Spring_2025.pdf) |
-| 4    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | |
-| 5    | Fairness       | [Responsibility in the Data Science Lifecycle](../../../assets/lifecycle_reader_2024_DS_UA_202_Spring'25.pdf) |[Lecture slides](../../../assets/4_Fairness_DS_UA_202_Spring'25.pdf)|
+| 4    | Fairness       | [Introduction and Algorithmic Fairness](../../../assets/fairness_reader_2024.pdf) | [Lecture slides](../../../assets/4_Fairness_DS_UA_202_Spring'25.pdf) |
+| 5    | Fairness       | [Responsibility in the Data Science Lifecycle](../../../assets/lifecycle_reader_2024_DS_UA_202_Spring'25.pdf) ||
 | 6    | Transparency   |         | |
 | 7    | Transparency   |         | |
 | 8    | Transparency   |         | |
